# ngspice

./: configure.ac
src/: Makefile.am
src/frontend/: outitf.c
src/frontend/plotting/: gnuplot.c
src/include/ngspice/: macros.h  ngspice.h
src/maths/KLU/: colamd.c
src/spicelib/devices/dio/: diosetup.c
src/spicelib/devices/nbjt/: nbjtdel.c
src/spicelib/devices/nbjt2/: nbt2del.c
src/spicelib/devices/numd/: numddel.c
src/spicelib/devices/numd2/: nud2del.c
src/spicelib/devices/numos/: nummdel.c
src/xspice/: Makefile.am
src/xspice/cmpp/: ifs_yacc.y
src/xspice/evt/: evtdump.c
src/xspice/examples/: Makefile.am
src/xspice/examples/d_to_real/: Makefile.am  d_to_real.cir
src/xspice/examples/nco/: Makefile.am  nco.cir
src/xspice/examples/print_param_types/: Makefile.am  print_param_types.cir
src/xspice/examples/real_delay/: Makefile.am  real_delay.cir
src/xspice/examples/real_gain/: Makefile.am  real_gain.cir
src/xspice/examples/real_to_v/: Makefile.am  real_to_v.cir
src/xspice/icm/analog/astate/: cfunc.mod
src/xspice/verilog/: Makefile.am  icarus_shim.c  vpi_dummy.c
